--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@supabase/auth-helpers-nextjs": "^0.7.0-next.8",
     "@supabase/supabase-js": "^2.22.0",
     "@types/node": "^20.2.5",
-    "@types/react": "^18.2.8",
-    "@types/react-dom": "^18.2.4",
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.14",
     "autoprefixer": "10.4.14",
     "eslint": "^8.42.0",
-    "eslint-config-next": "^13.4.4",
-    "next": "^13.4.4",
+    "eslint-config-next": "^14.0.0",
+    "latest": "^0.2.0",
+    "next": "^14.0.0",
     "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
