--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.5"
   }
 }
