--- a/package.json
+++ b/package.json
@@ -14,15 +14,25 @@
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
-    "autoprefixer": "10.4.14",
     "eslint": "^8.42.0",
     "eslint-config-next": "^14.0.0",
     "latest": "^0.2.0",
     "next": "^14.0.0",
-    "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   }
 }
