--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/supabase-js": "^2.38.4",
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "eslint": "^8.42.0",
     "eslint-config-next": "^14.0.0",
     "latest": "^0.2.0",
+    "lucide-react": "^0.292.0",
     "next": "^14.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.0.0",
     "use-debounce": "^10.0.0",
     "zod": "^3.22.4"
   },
