--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/supabase-js": "^2.38.4",
+    "@tanstack/react-table": "^8.10.7",
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
